css/kimchi.css
* , ::after, ::before {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Rubik', sans-serif;
}

html, body {
    width: 100%;
    overflow-x: hidden;
}

h1, h2, h3, p {
    -webkit-font-smoothing: antialiased;
}

.container {
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
  }
  @media (min-width: 768px) {
    .container {
      width: 750px;
    }
  }
  @media (min-width: 992px) {
    .container {
      width: 970px;
    }
  }
  @media (min-width: 1200px) {
    .container {
      width: 1170px;
    }
  }

.delay-custom-1 {
    animation-delay: 0.3s;
}

.delay-custom-2 {
    animation-delay: 0.6s;
}

/* HERO SECTION */

#hero-section {
    height: 29rem;
    /* background-image: url(/bg/bg-1500.svg); */
    background-image: url(../bg/bg-1500.svg);
    background-size: cover;
    background-position:  bottom;
    background-repeat: no-repeat;
}
@media (max-width: 576px){
    #hero-section {
        background-image: url(../bg/mobile-bg.svg);
       }
}

#hero-wrap{
    display: grid;
    grid-template-rows: auto auto auto auto;
}

#logo {
    /* border-radius: 40px; */
    width: 145px;
    height: auto;
    justify-self: center;
    margin-top: 5.5rem;
    /* background:rgba(255,255,255, 0.2); */
    /* padding: 0.5rem; */
}
@media (max-width: 376px){
    #logo {
        margin-top: 4.5rem;
       }
}

#main-title {
    color: white;
    justify-self: center;
    margin-top: 1.8rem;
    margin-bottom: 0;
    font-size: 2.5rem;
    letter-spacing: 0.1rem;
    font-weight: 500;
}
@media (max-width: 576px){
    #main-title {
        font-size: 2rem;
        text-align: center;
       }
}

#sub-main-title {
    color: white;
    justify-self: center;
    margin: 1.3rem 0 1.2rem;
    font-size: 1.5rem;
    font-weight: 400;
}
@media (max-width: 576px){
    #sub-main-title {
        font-size: 1.5rem;
        text-align: center;
       }
}

#social-grid {
    justify-self: center;
}


.media-logo {
    box-sizing: content-box;
    width: 47px;
    height: auto;
    padding: 0 0.7rem;
}


.transi {
    transition: all 0.3s ease-in-out;
}

.media-anchor:hover .wa {
    /* fill: rgb(44, 255, 121); */
    fill: #4BCEEC;
}

.media-anchor:hover .inst {
    /* fill: rgb(240, 35, 127); */
    fill: #4BCEEC;
}

.media-anchor:hover .fb {
    /* fill: #779ef1; */
    fill: #4BCEEC;
}

/* SUB HERO */

#sub-hero-wrap {
    display: grid;
    grid-template-rows: auto auto;
}

#korean-hero {
    justify-self: center;
    color: #FEB47B;
    margin-top: 4rem;
    font-size: 4rem;
    letter-spacing: 0.7rem;
    font-weight: 400;
}
@media (max-width: 576px){
    #korean-hero {
        font-size: 3rem;
       }
}


#anyeo {
    margin-top: 0.7rem;
    justify-self: center;
    color: #4BCEEC;
    font-weight: 600;
    font-style: italic;
    font-size: 1.2rem;
}
@media (max-width: 576px){
    #anyeo {
        font-size: 1rem;
       }
}

#sub-hero-section {
    margin-bottom: 8rem;
}
@media (max-width: 576px){
    #sub-hero-section {
        margin-bottom: 4rem;
       }
}

/* TEACHER SECTION */

#teacher-section {
    min-height: 730px;
}

#teacher-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto;
}

@media (max-width: 992px){
 #picture-wrap {
    grid-column: 1 / 3;
    }
}

@media (max-width: 992px){
    #bio-wrap {
       grid-column: 1 / 3;
    }
}

#teacher-pic{
    display: block;
    border-radius: 10px;
    width: 330px;
    height: auto;
    margin: 4rem auto 0;
}

#jeong {
    color: #FEB47B;
    margin: 1.75rem 0 0.7rem;
    text-align: center;
    font-weight: 400;
    font-size: 1.75rem;
    letter-spacing: 0.1rem;

}

#summer {
    margin: 0.2rem 0 2rem;
    color: #4BCEEC;
    text-align: center;
    font-style: italic;
    font-weight: 600;
    font-size: 1.1rem;
    letter-spacing: 0.05rem;
}

#bio-wrap {
    padding-left: 2rem;
}
@media (max-width: 576px){
    #bio-wrap {
        padding-left: 0;
       }
}

#meet-1 {
    font-size: 3.1rem;
    color: #FEB47B;
    margin-bottom: 0;
    letter-spacing: 0.2rem;
}

#the {
    color: #A2A2A2;
}

#meet-2 {
    font-size: 3.1rem;
    color: #FEB47B;
    margin-left: 10rem;
    font-weight: 700;
    letter-spacing: 0.2rem;
}

@media (max-width: 576px){
    #meet-1, #the, #meet-2  {
        font-size: 2.5rem;
    }
    #meet-2 {
        margin-left: 7.5rem;
    }
}

#teacher-quote {
    margin: 2rem 0 1.5rem;
    text-align: center;
    color: #809CA2;
    font-size: 1.1rem;
    font-style: italic;
    font-weight: 600;
    letter-spacing: 0.025rem;
    line-height: 1.5rem;
}

#bio {
    color: #809CA2;
    font-size: 1.1rem;
    text-align: justify;
    padding: 0 1.5rem;
    margin-bottom: 4rem;
    line-height: 1.6rem;
}
@media (max-width: 992px){
    #bio {
        padding-bottom: 2rem;
    }
}

/* SEP */

.sep-kor {
    display: block;
    margin: -3rem auto -3.45rem;
}


/* SEVICES */

#services-section {
    min-height: 535px;
    background-image: linear-gradient(#4BCEEC, #14B1D5);
    margin-bottom: 8rem;
}
@media (max-width: 576px){
    #services-section {
        margin-bottom: 4rem;
    }
}

.filler {
    height: 90px;
}

#service-grid {
    padding: 1px;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
    grid-auto-rows: auto;
    justify-items: center;
    align-items: center;
}

.card {
    width: 260px;
    height: 370px;
    border-radius: 20px;
    border: 3px solid #FEB47B;
    margin-bottom: 3rem;
    overflow: hidden;
    background-color: #ffffff;
}
@media (max-width: 992px){
    #service-grid div:last-child {
        margin-bottom: 4.5rem;
    }
}

#skype-class {
    grid-column: 1/3;
}

@media (max-width: 992px){
    #skype-class {
        grid-column: 1/4;
    }
}
@media (max-width: 700px){
    #skype-class {
        grid-column: 1/7;
    }
}

#in-person-class {
    grid-column: 3/5;
}

@media (max-width: 992px){
    #in-person-class {
        grid-column: 4/7;
    }
}
/* ... */

